hamburger menu not showing but fixed and edited all other areas in code

--- a/styleerror.css
+++ b/styleerror.css
@@ -98,10 +98,10 @@
 
 .navbar__links:hover {
     color: #f77062;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease
 }
 
-@media screen and (max-width:960px) {
+@media screen and (max-width: 960px) {
     .navbar__container {
         display: flex;
         justify-content: space-between;
@@ -123,10 +123,8 @@
         transition: all 0.5s ease;
         height: 50vh;
         z-index: -1;
-        background: #131313;
     }
 
-    /* v this class is for the javascript of the hamburger menu v */
     .navbar__menu.active {
         background: #131313;
         top: 100%;
@@ -134,14 +132,14 @@
         transition: all 0.5s ease;
         z-index: 99;
         height: 50vh;
-        font-size: 1.6rem;
+        font-size: 1.6 rem;
     }
 
     #navbar__logo {
         padding-left: 25px;
     }
 
-    .navbar__toogle .bar {
+    .navbar__toggle .bar {
         width: 25px;
         height: 3px;
         margin: 5px auto;
@@ -180,21 +178,8 @@
         margin: 0;
     }
 
-    .navbar__toggle .bar {
+    .navbar_toggle .bar {
         display: block;
         cursor: pointer;
     }
-
-    #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 0;
-    }
-    #mobile-menu.is-active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-    #mobile-menu.is-active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-    
 }
-
-/*/////////////////////////////////////////////////////////////*/
